# workflow-service

./: .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README  README.md  README.pypi.rst  client.py  cwl_client.py  cwl_flask.py  cwl_runner_wes.py  cwl_service.py  cwltool_flask.py  cwltool_service.py  cwltool_stream.py  dev-requirements.txt  lint-requirements.txt  myapp.py  mypy-requirements.txt  mypy.ini  passenger_wsgi.py  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  tox.ini  wes-docker.sh  wes_client.py  wes_service.py
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml
notebooks/: toil-wes-demo.ipynb
swagger/proto/: workflow_execution.swagger.json
test/: clientTest.py  serviceTest.py  test_client_util.py  test_integration.py  test_wesclient_utils.py
test/workflows/038957fc49a84276bc1761154e9d2045/: pid
test/workflows/15f8cc6d19ef4df984a37f59f51da827/: pid
test/workflows/1af2db72330044cea050315a4d2773bf/: pid
test/workflows/2344156caf504351b11c563235d33c71/: pid
test/workflows/23e23349739e4f98ada334806ab2de1b/: pid
test/workflows/2e8500790be941b790b54a5152a10a95/: pid
test/workflows/34fdace2367d4967a44b28eb7f7c436b/: pid
test/workflows/4b03542c6e004593972ce66cf816f19f/: pid
test/workflows/4c368f73a99041fb9de6636122530ffe/: pid
test/workflows/52d9bf65679342ba851f8571d65aa165/: pid  request.json
test/workflows/531d18347ffb44a1bfbc7daa9fff4bf8/: pid  stderr
test/workflows/7289f24844914214b4a326dad454b495/: pid
test/workflows/7978b896e2234245bbb652ea76729a4b/: pid
test/workflows/90dc9352fc854d3c81253d80b9251167/: pid
test/workflows/9709649f00e64f9c846b6db4e4d0a819/: pid
test/workflows/9bea522bbffa427e93df164759d97e1e/: pid
test/workflows/b11820e7591f491381b5b52e340a572d/: pid
test/workflows/b24656c6d2294b7da7e07d602fe99d5a/: pid
test/workflows/b33ddf33f15640d492a8a46745c2d8ae/: pid
test/workflows/d5ffeb31a997492ca6a7044cea206b38/: pid
test/workflows/da419d0de9104a1a9bee11687be6d0e7/: pid
test/workflows/e008412f3d3847e3b05a4b7039d66fa3/: pid
test/workflows/e89002454b57423a98545e0c266619e3/: pid
test/workflows/eed7a11a019c43ca990db7218e80a1ce/: pid
test/workflows/f3b3595a377748c192e06a3b59ff9ee0/: pid
test/workflows/fa90b54e5d9649d69fce132bc6be7025/: pid
test/workflows/fbe73fe7c1cb4d38826e26535236e08d/: pid
testdata/: dockstore-tool-md5sum.cwl  md5sum.cwl  md5sum.cwl.json  md5sum.json  md5sum.wdl
wes_client/: __init__.py  util.py  wes_client_main.py
wes_service/: __init__.py  arvados_wes.py  cwl_runner.py  toil_wes.py  util.py  wes_service_main.py
wes_service/openapi/: workflow_execution_service.swagger.yaml
wes_service/swagger/proto/: workflow_execution.swagger.json
workflows/83a5ae338a1d43e48e5bfce8c76d20bb/: cwl.input.json  pid  stderr
