[build-system]
requires = [
    "setuptools>=61.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "wes-service"
version = "5.0"
authors = [{name = "GA4GH Containers and Workflows task team", email = "common-workflow-language@googlegroups.com"}]
description = "GA4GH Workflow Execution Service reference implementation"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "connexion[swagger-ui,flask,uvicorn] >= 3, < 4",
    "ruamel.yaml >= 0.15.78",
    "schema-salad",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/common-workflow-language/cwltool-service"
Download = "https://github.com/common-workflow-language/cwltool-service/releases"
"Bug Tracker" = "https://github.com/common-workflow-language/cwltool-service/issues"

[project.optional-dependencies]
cwltool = ["cwlref-runner"]
arvados = ["arvados-cwl-runner"]
toil = ["toil[cwl]==9.1.2"]

[project.scripts]
wes-server = "wes_service.wes_service_main:main"
wes-client = "wes_client.wes_client_main:main"

[tool.setuptools]
packages = ["wes_service", "wes_client"]
include-package-data = true
zip-safe = false
platforms = ['"MacOS X"', '"Posix"']

[tool.setuptools.package-data]
wes_service = ["openapi/workflow_execution_service.swagger.yaml"]

[tool.isort]
profile = "black"
