[metadata]
name = wes-service
version = 4.0
author = GA4GH Containers and Workflows task team
author_email = common-workflow-language@googlegroups.com
description = GA4GH Workflow Execution Service reference implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/common-workflow-language/cwltool-service
download_url = https://github.com/common-workflow-language/cwltool-service/releases
project_urls =
    Bug Tracker = https://github.com/common-workflow-language/cwltool-service/issues
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    programming language :: python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
platforms = "MacOS X", "Posix"

[options]
packages = wes_service, wes_client
python_requires = ~=3.7
setup_requires = 
  pytest-runner
test_requires =
  pytest
include_package_data = True
install_requires =
  connexion >= 2.0.2, < 3
  ruamel.yaml >= 0.15.78
  schema-salad
zip_safe = False

[options.extras_require]
cwltool = 
  cwlref-runner
arvados =
  arvados-cwl-runner
toil =
  toil[cwl]==5.7.1

[options.entry_points]
console_scripts=
  wes-server=wes_service.wes_service_main:main
  wes-client=wes_client.wes_client_main:main

[options.package_data]
wes_service = 
  openapi/workflow_execution_service.swagger.yaml
